--- a/SFML.vcxproj
+++ b/SFML.vcxproj
@@ -151,9 +151,11 @@
     <ClInclude Include="code\Interactive.h" />
     <ClInclude Include="code\Inventory.h" />
     <ClInclude Include="code\Item.h" />
+    <ClInclude Include="code\Item2.h" />
     <ClInclude Include="code\Movement.h" />
     <ClInclude Include="code\Obstacle.h" />
     <ClInclude Include="code\Player.h" />
+    <ClInclude Include="code\PotionHP.h" />
     <ClInclude Include="code\Score.h" />
   </ItemGroup>
   <ItemGroup>
@@ -166,9 +168,11 @@
     <ClCompile Include="code\Interactive.cpp" />
     <ClCompile Include="code\Inventory.cpp" />
     <ClCompile Include="code\Item.cpp" />
+    <ClCompile Include="code\Item2.cpp" />
     <ClCompile Include="code\Movement.cpp" />
     <ClCompile Include="code\Obstacle.cpp" />
     <ClCompile Include="code\Player.cpp" />
+    <ClCompile Include="code\PotionHP.cpp" />
     <ClCompile Include="code\Score.cpp" />
     <ClCompile Include="code\SFML.cpp" />
   </ItemGroup>
